--- a/pkg/arch/kernel/PKGBUILD
+++ b/pkg/arch/kernel/PKGBUILD
@@ -47,9 +47,9 @@ validpgpkeys=(
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
 )
 sha256sums=('SKIP'
-            '533d32e1f6c33f7f390796af18dc3dca0a6aa294f8e9340600cd86c8df65e25b'
+            'SKIP'
             'b261a70fa7d6799328c926b2603b17336b76adb313eb4374c6cb06716caa9fe6'
-            '22902a3ac84f3ae0a8b442a99c63f81ce8f2dfd678c7c66420fffd52110f11d9'
+            'SKIP'
             '5b4a5bd836079714b0fee72c52491307d2c3c76101e26e2b6cbdf52fa5da3dc8'
             'a7ba320be178ed1c8f00825f42275eaaed3c4a0c75d46306f6fff61fa1775a5b'
             'a9d481fa0fd1cc852fd869f3c5635ad1cfc52161caebe4d0622e7be9434e67a6'
@@ -99,6 +99,13 @@ prepare() {
   make olddefconfig
 
   make -s kernelrelease > version
+
+  scripts/config --module  CONFIG_ASHMEM
+  scripts/config --enable  CONFIG_ANDROID
+  scripts/config --enable  CONFIG_ANDROID_BINDER_IPC
+  scripts/config --enable  CONFIG_ANDROID_BINDERFS
+  scripts/config --set-str CONFIG_ANDROID_BINDER_DEVICES ""
+  
   echo "Prepared $pkgbase version $(<version)"
 }
 
