--- a/pkg/arch/kernel/config
+++ b/pkg/arch/kernel/config
@@ -11042,3 +11042,10 @@ CONFIG_ARCH_USE_MEMTEST=y
 # CONFIG_HYPERV_TESTING is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
+
+# Add modules for Anbox
+# CONFIG_ASHMEM=y
+# CONFIG_ANDROID=y
+# CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDERFS=y
+# CONFIG_ANDROID_BINDER_DEVICES=""
